# dmm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_wxWidgetsFlags.cmake  Changelog.txt  LICENSE.md  License.txt  README.md  _config.yml  index.md
.github/workflows/: dmm_build.yml  dmm_build_release.yml  dmm_check_pr.yml  dmm_perform_release.yml  ss2bmm_build_release.yml
Resource/: Resource.aps  Resource.rc
Resource/raw/: about.xcf
Script/7zppMSVCBuild/: BuildAll.bat  BuildDebug.bat  BuildRelease.bat  ClearAll.bat  PreBuild.bat  _Build.bat
Script/7zppMSVCBuild/Config/: 7zpp.vcxproj  CMakeLists.txt
Script/wxWidgetsMSVCBuild/: BuildAll.bat  BuildDebug.bat  BuildRelease.bat  ClearAll.bat  _Build.bat
Source/: AboutDialog.cpp  AboutDialog.hpp  Application.cpp  Application.hpp  ApplicationConfig.hpp  ApplicationInfo.cpp  ApplicationInfo.hpp  Config.cpp  Config.hpp  CustomEvent.cpp  CustomEvent.hpp  InstallConfig.hpp  MainFrame.cpp  MainFrame.hpp  ManageProfilesDialog.cpp  ManageProfilesDialog.hpp  ManageProfilesFrame.cpp  ManageProfilesFrame.hpp  Message.cpp  Message.hpp  Mod.cpp  Mod.hpp  ModConfig.hpp  ModExtractor.cpp  ModExtractor.hpp  ModManager.cpp  ModManager.hpp  ProfileConfig.hpp  SelectGameFolderDialog.cpp  SelectGameFolderDialog.hpp  SelectModArchivesDialog.cpp  SelectModArchivesDialog.hpp  ShellRun.cpp  ShellRun.hpp  StatusBarManipulator.cpp  StatusBarManipulator.hpp  TransparentStaticText.hpp  Utils.cpp  Utils.hpp
Source/Precompiled/: Precompiled.cpp  Precompiled.hpp
VisualStudio/: Build.bat  DarkModManager.sln  DarkModManager.vcxproj  DarkModManager.vcxproj.filters  SS2BlueModManager.sln  SS2BlueModManager.vcxproj  SS2BlueModManager.vcxproj.filters
docs/: Gemfile  README.md  _config.yml  index.md
docs/_layouts/: default.html
wxFormBuilder/: DarkModManager.cpp  DarkModManager.fbp  DarkModManager.h  SS2BlueModManager.cpp  SS2BlueModManager.fbp  SS2BlueModManager.h
(+7 files in other folders)
